--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
 </head>
 <body>
     <h1>Book Review App</h1>
-    
+    <form id="reviewForm">
+        <input type="text" id="title" placeholder="Book Title" required>
+        <input type="text" id="author" placeholder="author" required>
+        <textarea id="review" placeholder="Write a review..." required></textarea>
+        <input type="number" id="rating" placeholder="Rating (1-5)" min="1" max="5" required>
+    </form>
     
 </body>
 </html>
