--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Book Review App</title>
-    <link rel="stylesheet" href="css\style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <h1>Book Review App</h1>
@@ -13,7 +13,10 @@
         <input type="text" id="author" placeholder="author" required>
         <textarea id="review" placeholder="Write a review..." required></textarea>
         <input type="number" id="rating" placeholder="Rating (1-5)" min="1" max="5" required>
+        <button type="submit">Add Review</button>
     </form>
+    <div id="reviews"></div>
+    <script src="js/script.js"></script>
     
 </body>
 </html>
