--- a/index.html
+++ b/index.html
@@ -7,16 +7,36 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1>Book Review App</h1>
-    <form id="reviewForm">
-        <input type="text" id="title" placeholder="Book Title" required>
-        <input type="text" id="author" placeholder="author" required>
-        <textarea id="review" placeholder="Write a review..." required></textarea>
-        <input type="number" id="rating" placeholder="Rating (1-5)" min="1" max="5" required>
-        <button type="submit">Add Review</button>
-    </form>
-    <div id="reviews"></div>
-    <script src="js/script.js"></script>
-    
+    <header>
+        <h1>Book Review App</h1>
+        <p>Share your thoughts about your favorite books</p>
+    </header>
+
+    <main>
+        <section class="review-form">
+            <h2>Add a New Review</h2>
+            <form id="reviewForm">
+                <input type="text" id="title" placeholder="Book Title" required>
+                <input type="text" id="author" placeholder="Author" required>
+                <textarea id="review" placeholder="Write your review..." required></textarea>
+                <div class="rating-container">
+                    <label for="rating">Rating:</label>
+                    <input type="number" id="rating" min="1" max="5" value="3" required>
+                </div>
+                <button type="submit">Submit Review</button>
+            </form>
+        </section>
+
+        <section class="reviews-list">
+            <h2>Recent Reviews</h2>
+            <div id="reviews"></div>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2025 Book Review App</p>
+    </footer>
+
+    <script src="js/script.js" defer></script>
 </body>
 </html>
