phase final project

--- a/index.html
+++ b/index.html
@@ -37,6 +37,6 @@
         <p>&copy; 2025 Book Review App</p>
     </footer>
 
-    <script src="js/script.js" defer></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
